Fixed reading and writing file methods.